fixing alignment on homepage

--- a/style.css
+++ b/style.css
@@ -43,39 +43,33 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin: 30px;
 }
 
-/* no need for positions, use margins */
+
 .my_pic {
   border-radius: 50px;
   height: 200px;
   width: 250px;
-  /* position: relative; */
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
-/* no need for positions, use margins */
 .button1 {
   color: white;
-  background-color: none;
+  background-color: white;
   border-radius: 20px;
   padding: 10px;
   font-weight: bold;
-  /* position: absolute;
-  top: 65%; */
-  margin-top: 65px;
+  margin-top: 30px;
 }
 
-/* no need for positions, use margins */
 .button2 {
   color: white;
-  background-color: none;
+  background-color: white;
   border-radius: 20px;
   padding: 10px;
   font-weight: bold;
-  /* position: absolute;
-  top: 75%; */
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 footer {
